--- a/templates/index.html
+++ b/templates/index.html
@@ -20,13 +20,15 @@
     </div>
     
     <div class="description">
-        <p>An online game based on the famous werewolf cardgame, but also with AI-agents as players. 
-        </p>
+        <p>An online game based on the famous werewolf cardgame, but also with AI-agents as players. </p>
+        <p>It's a social role-playing game that divides a group of people into two camps: the villagers and the werewolves. 
+            The objective of the game differs for the two groups. 
+            The werewolves aim to eliminate all the villagers, while the villagers aim to identify and eradicate all the werewolves.</p>
     </div>
     
     <div class="navigation">
-        <button class="prev-button" onclick="window.location.href='/'">Start new game</button>
-        <button class="next-button" onclick="window.location.href='/'">Apply at an existing game</button>
+        <button class="prev-button" onclick="window.location.href='/newgame'">Start new game</button>
+        <button class="next-button" onclick="window.location.href='/games'">Apply at an existing game</button>
     </div>
 </div>
 </body>
